Timer and other improvements

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
             <canvas id="wheelCanvas" width="600" height="600"></canvas>
         </div>
 
+        <div id="timer" class="timer"></div>
+        <div id="roundResult" class="round-result"></div>
+
         <div class="info-panel">
             <div id="currentDonor" class="donor-info"></div>
             <div id="spinQueue" class="spin-queue"></div>
