Improvements and color changes

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
             <input type="text" id="testDonor" placeholder="Donor Name" value="TestViewer">
             <input type="number" id="testBits" placeholder="Bits Amount" value="100" step="100">
             <button onclick="testSpin()">Test Spin</button>
+            <button onclick="startRoundManual()" style="background: linear-gradient(135deg, #6c3483, #9b59b6);">Start Round</button>
         </div>
 
         <div class="stats">
