--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
             <input type="number" id="testBits" placeholder="Bits Amount" value="100" step="100">
             <button onclick="testSpin()">Test Spin</button>
             <button onclick="startRoundManual()" style="background: linear-gradient(135deg, #6c3483, #9b59b6);">Start Round</button>
+            <button onclick="clearData()" style="background: linear-gradient(135deg, #555, #888);">Clear Data</button>
         </div>
 
         <div class="stats">
